# Bacchus

./: .gitignore  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
bacchus/: __init__.py  app.py  config.py  constants.py  database.py  model_downloader.py  model_manager.py  system_info.py  theme.py
bacchus/inference/: __init__.py  autonomous_tools.py  chat.py  decision_schema.py  inference_worker.py  structured_generation.py  tool_calling.py  tool_context.py  vlm_worker.py
bacchus/locales/: __init__.py  en.yaml  pt-BR.yaml
bacchus/mcp/: __init__.py  __main__.py  client.py  commandline.py  filesystem.py  manager.py  web_request.py  web_search.py
bacchus/mcp/servers/: __init__.py  system_monitor.py
bacchus/prompts/: __init__.py  prompt_manager.py
bacchus/prompts/en/: constraints.md  identity.md  soul.md  tools.md
bacchus/prompts/pt-BR/: constraints.md  identity.md  soul.md  tools.md
bacchus/rag/: __init__.py  document.py  embeddings.py  retrieval.py
bacchus/sandbox/: __init__.py  executor.py  runner.py
bacchus/ui/: __init__.py  _conversation_mixin.py  _inference_mixin.py  _rag_mixin.py  chat_widget.py  download_worker.py  main_window.py  model_card.py  model_load_worker.py  permission_dialog.py  project_dialog.py  prompt_area.py  settings_dialog.py  sidebar.py  status_bar.py  theme.py  tool_result_widget.py
bacchus/ui/widgets/: __init__.py
resources/styles/: .gitkeep
